# Try-RabbitMQ-cpp

./: CMakeLists.txt  README.md
src/client/: CMakeLists.txt  dialogtoeditsettings.cpp  dialogtoeditsettings.ui  logger.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  queuelistener.cpp  utils.cpp
src/client/config/: config.ini
src/client/include/: dialogtoeditsettings.h  logger.h  mainwindow.h  queuelistener.h
src/server/: CMakeLists.txt  logger.cpp  main.cpp  rabbitserver.cpp  utils.cpp
src/server/config/: config.ini
src/server/include/: rabbitserver.h  utils.h
test/server/: CMakeLists.txt  testServer.cpp
